syntax = "proto3";

package proto;

option go_package = "github.com/myusername/myservice/proto";

service UserService {
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
}

message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  string id = 1;
  string name = 2;
  int32 age = 3;
}